# frots

./: .gitignore  API.md  CLAUDE.md  PLAN.md  README.md  RUST_REFERENCE_NOTES.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
fixture-gen/: Cargo.toml
fixture-gen/fixtures/: secp256k1_tr_2of3_dealer.json  secp256k1_tr_2of3_dkg.json  secp256k1_tr_3of5_dealer.json  secp256k1_tr_3of5_dkg.json
fixture-gen/src/: ceremony.rs  fixture.rs  main.rs  recording_rng.rs
src/: dkg.ts  fixture.ts  hash.ts  index.ts  point.ts  poly.ts  rng-replay.ts  sign.ts  tweak.ts
src/secp256k1-tr/: dkg.ts  hash.ts  index.ts  keys.ts  lagrange.ts  point.ts  poly.ts  sign.ts  tweak.ts
tests/: aggregate.test.ts  binding-factor-prefix.test.ts  binding-factor.test.ts  challenge.test.ts  dkg-ceremony.test.ts  dkg-finalize.test.ts  dkg-pok.test.ts  dkg-round1.test.ts  dkg-round2.test.ts  dkg-tweak.test.ts  dkg-types.test.ts  finalize-keygen.test.ts  fixture-loader.test.ts  group-commitment.test.ts  h3.test.ts  h4.test.ts  key-package.test.ts  lagrange.test.ts  point-commit.test.ts  poly-eval.test.ts  public-api.test.ts  rng-replay.test.ts  sanity.test.ts  sign-aggregate.test.ts  sign-round1.test.ts  sign-round2.test.ts  signature-share.test.ts  untweaked-signing.test.ts  vss.test.ts
